# gameboy-perfect-core

./: .gitignore  .gitmodules  CMakeLists.txt  CmakeList.txt  README.md  build.sh  build_log.txt  errors_only.txt  gameboy_perfect_core_libretro.info  make  makefile  project_source_html.sh  readme.md  short_errors.txt
include/: libretro.h
src/: core_comon.h  core_state.c  core_state.h
src/common/: apu.c  apu.h  audio.c  audio.h  core_state.c  core_state.h  cpu.c  cpu.h  gba_cpu.c  gba_cpu.h  gba_cpu_step.c  gba_mmu.c  gba_mmu.h  libretro.c  mmu.c  mmu.h  ppu.c  ppu.h  timing.c  timing.h
src/gb/: .goutputstream-5NBAE3  apu.c  apu.h  cpu.c  cpu.h  cpu_stub.c  cpu_stub.h  gb_apu.c  gb_apu.h  gb_cart.c  gb_cart.h  gb_input.c  gb_input.h  gb_mem.c  gb_mem.h  gb_ppu.c  gb_ppu.h  mmu.c  mmu.h  ppu.c  ppu.h  ppu_stub.c  ppu_stub.h  timing.h
src/gba/: core_state.c  core_state.h  cpu.c  cpu.h  cpu_stub.c  gba_apu.c  gba_apu.h  gba_core.c  gba_cpu.c  gba_cpu.h  gba_mmu.c  gba_mmu.h  gba_ppu.c  gba_ppu.h  mmu.c  mmu.h
